<resources>
    <string name="app_name">Recipe4155</string>
    <string name="str_btnLogin">Login</string>
    <string name="str_btnSignup">Signup</string>
    <string name="str_hintUserName"> Email </string>
    <string name="str_hintPassword">Password</string>
    <string name="str_firstName">First Name</string>
    <string name="str_editLastName">Last Name</string>
    <string name="str_editEmail">Email</string>
    <string name="str_choosepassword">Choose Password</string>
    <string name="str_repeatPassword">Repeat Password</string>
    <string name="str_btnCancel">Cancel</string>
</resources>
